--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1078,3 +1078,60 @@
   publisher = {ACM},
   address = {New York, NY, USA}
 }
+
+@article{Clarke86,
+  author = {Clarke, E. M. and Emerson, E. A. and Sistla, A. P.},
+  title = {{Automatic Verification of Finite-state Concurrent Systems Using Temporal Logic Specifications}},
+  journal = {{ACM} Transactions on Programming Languages and Systems},
+  issue_date = {April 1986},
+  volume = {8},
+  number = {2},
+  month = apr,
+  year = {1986},
+  issn = {0164-0925},
+  pages = {244--263},
+  numpages = {20}, 
+  doi = {10.1145/5397.5399},
+  acmid = {5399},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
+@article{Lacey04,
+  author = {Lacey, David and Jones, Neil D. and Van Wyk, Eric and Frederiksen, Carl Christian},
+  title = {{Compiler Optimization Correctness by Temporal Logic}},
+  journal = {Higher-Order and Symbolic Computation},
+  issue_date = {September 2004},
+  volume = {17},
+  number = {3},
+  month = sep,
+  year = {2004},
+  issn = {1388-3690},
+  pages = {173--206},
+  numpages = {34},
+  doi = {10.1023/B:LISP.0000029444.99264.c0},
+  acmid = {993038},
+  publisher = {Kluwer Academic Publishers},
+  address = {Hingham, MA, USA},
+  keywords = {compiler verification, model checking, optimizing compilers, temporal logic},
+}
+
+@article{Kalvala09,
+  author = {Kalvala, Sara and Warburton, Richard and Lacey, David},
+  title = {{Program Transformations Using Temporal Logic Side Conditions}},
+  journal = {ACM Transactions on Programming Languages and Systems},
+  issue_date = {May 2009},
+  volume = {31},
+  number = {4},
+  month = may,
+  year = {2009},
+  issn = {0164-0925},
+  pages = {14:1--14:48},
+  articleno = {14},
+  numpages = {48},  
+  doi = {10.1145/1516507.1516509},
+  acmid = {1516509},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {Optimizing compilers, program transformation, rewriting, temporal logic},
+}
