--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1135,3 +1135,55 @@
   address = {New York, NY, USA},
   keywords = {Optimizing compilers, program transformation, rewriting, temporal logic},
 }
+
+@inproceedings{Kundu09,
+  author = {Kundu, Sudipta and Tatlock, Zachary and Lerner, Sorin},
+  title = {{Proving Optimizations Correct Using Parameterized Program Equivalence}},
+  booktitle = {Proceedings of the 30th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  series = {PLDI '09},
+  year = {2009},
+  isbn = {978-1-60558-392-1},
+  location = {Dublin, Ireland},
+  pages = {327--337},
+  numpages = {11},
+  doi = {10.1145/1542476.1542513},
+  acmid = {1542513},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {compiler optimization, correctness, translation validation},
+}
+
+@article{Cooper01,
+  author = {Cooper, Keith D. and Simpson, L. Taylor and Vick, Christopher A.},
+  title = {{Operator Strength Reduction}},
+  journal = {{ACM} Transactions on Programming Languages and Systems},
+  issue_date = {September 2001},
+  volume = {23},
+  number = {5},
+  month = sep,
+  year = {2001},
+  issn = {0164-0925},
+  pages = {603--625},
+  numpages = {23}, 
+  doi = {10.1145/504709.504710},
+  acmid = {504710},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {loops, static single assignment form, strength reduction},
+}
+
+@inproceedings{Lacey02,
+  author = {Lacey, David and Jones, Neil D. and Van Wyk, Eric and Frederiksen, Carl Christian},
+  title = {{Proving Correctness of Compiler Optimizations by Temporal Logic}},
+  booktitle = {Proceedings of the 29th ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+  series = {POPL '02},
+  year = {2002},
+  isbn = {1-58113-450-9},
+  location = {Portland, Oregon},
+  pages = {283--294},
+  numpages = {12}, 
+  doi = {10.1145/503272.503299},
+  acmid = {503299},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
