--- a/header.tex
+++ b/header.tex
@@ -3,6 +3,7 @@
 \usepackage{listings}
 \usepackage{enumitem}
 \usepackage{amsfonts,amsmath,amssymb}
+\usepackage{tabularx}
 
 \let\oldnl\nl% Store \nl in \oldnl
 \newcommand{\nonl}{\renewcommand{\nl}{\let\nl\oldnl}}% Remove line number for one line
