--- a/continuous-opt.tex
+++ b/continuous-opt.tex
@@ -11,6 +11,6 @@ In the second part, we make a first step towards a provably sound methodological
 \input{osr-correctness}
 
 %\section{On-Stack Replacement in the Presence of Compiler Optimizations}
-\section{On-Stack Replacement and Compiler Optimizations}
+\section{OSR and Compiler Optimizations}
 
 \input{osr-related}
