--- a/header.tex
+++ b/header.tex
@@ -93,8 +93,9 @@
 \newcommand{\fstub}{$\textsf{f}_{\textsf{stub}}$}
 \newcommand{\osrpoint}{$\textsf{L}$}
 
-% build_comp
+%% build_comp
 \newcommand{\mytt}[1]{\text{${\tt #1}$}}
+% language
 \newcommand{\trans}{\Rightarrow}
 \newcommand{\mysem}[1]{[\![#1]\!]}
 \newcommand{\lve}{\text{LVE}}
@@ -122,3 +123,10 @@
 \newcommand{\wc}{\mytt{c}}
 \newcommand{\wv}{\mytt{v}}
 \newcommand{\wm}{\mytt{m}}
+% algorithms
+\newcommand{\mundef}{unde\hspace{-0.1em}f}
+\newcommand{\osrtrans}{\mytt{OSR\_trans}}
+\newcommand{\buildcomp}{\mytt{build\_comp}}
+\newcommand{\reconstruct}{\mytt{reconstruct}}
+\newcommand{\apply}{\mytt{apply}}
+\newcommand{\dopasses}{\mytt{do\_passes}}
