--- a/osr-llvm.tex
+++ b/osr-llvm.tex
@@ -18,6 +18,7 @@ Pioneered in the SELF language runtime in the early 90's, OSR mechanisms have dr
 \noindent We show the feasibility of our approach by implementing \osrkit, a prototype library for the MCJIT just-in-time compiler from the LLVM compiler infrastructure.
 
 \subsection{Approach}
+\label{ss:osr-llvm-approach}
 
 The key to generality and platform-independence in our approach is to express the OSR machinery entirely at intermediate representation (IR) level, without resorting to native-code manipulation or special intrinsics of a compiler.
 
