--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1187,3 +1187,54 @@
   publisher = {ACM},
   address = {New York, NY, USA},
 }
+
+@inproceedings{Guo11,
+  author = {Guo, Shu-yu and Palsberg, Jens},
+  title = {{The Essence of Compiling with Traces}},
+  booktitle = {Proceedings of the 38th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+  series = {POPL '11},
+  year = {2011},
+  isbn = {978-1-4503-0490-0},
+  location = {Austin, Texas, USA},
+  pages = {563--574},
+  numpages = {12}, 
+  doi = {10.1145/1926385.1926450},
+  acmid = {1926450},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {bisimulation, compiler correctness, just-in-time compilation},
+}
+
+
+@inproceedings{Bala00,
+  author = {Bala, Vasanth and Duesterwald, Evelyn and Banerjia, Sanjeev},
+  title = {{Dynamo: A Transparent Dynamic Optimization System}},
+  booktitle = {Proceedings of the ACM SIGPLAN 2000 Conference on Programming Language Design and Implementation},
+  series = {PLDI '00},
+  year = {2000},
+  isbn = {1-58113-199-2},
+  location = {Vancouver, British Columbia, Canada},
+  pages = {1--12},
+  numpages = {12}, 
+  doi = {10.1145/349299.349303},
+  acmid = {349303},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
+@inproceedings{Gal09,
+  author = {Gal, Andreas and Eich, Brendan and Shaver, Mike and Anderson, David and Mandelin, David and Haghighat, Mohammad R. and Kaplan, Blake and Hoare, Graydon and Zbarsky, Boris and Orendorff, Jason and Ruderman, Jesse and Smith, Edwin W. and Reitmaier, Rick and Bebenita, Michael and Chang, Mason and Franz, Michael},
+  title = {{Trace-based Just-in-time Type Specialization for Dynamic Languages}},
+  booktitle = {Proceedings of the 30th ACM SIGPLAN Conference on Programming Language Design and Implementation},
+  series = {PLDI '09},
+  year = {2009},
+  isbn = {978-1-60558-392-1},
+  location = {Dublin, Ireland},
+  pages = {465--478},
+  numpages = {14}, 
+  doi = {10.1145/1542476.1542528},
+  acmid = {1542528},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {dynamically typed languages, trace-based compilation},
+}
